Redesign SLNIC pcapng merge workflow
